versao imaguen alinhamentos css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
     <head>
         <title>Meu primeiro site</title>
+        <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
-        <h1>Hello World</h1>
-        <p>Meu site sera unico</p>
+        <figure>
+            <img src="img/logo.png" alt="">
+        </figure>
+        <div class="container">
+            <h1>Sobre a Galaxia</h1>
+                <p>Galáxia é uma grande estrutura formada por vários corpos celestes. A sua evolução e transformação foi descoberta pela ciência ao longo do processo de modernização dos estudos astronômicos. Porém, ainda há um conjunto de hipóteses relacionadas às galáxias que não foram comprovadas cientificamente.</p>
+                <p>As galáxias são classificadas conforme o seu formato. A principal e mais conhecida galáxia é a Via Láctea, justamente onde está localizado o Sistema Solar e o planeta Terra. A formação das galáxias está atrelada ao processo de origem do Universo. Essas estruturas evoluem por meio da ação de diversos fenômenos astronômicos.</p>
+                <h2>O que é galáxia?</h2>
+                <p>As galáxias são grandes estruturas formadas por inúmeros corpos celestes, como estrelas e planetas, além de poeira e gás cósmico. Esses elementos, por meio da ação da gravidade, permanecem em um mesmo agrupamento, formando, assim, grandes estruturas.</p>
+                <p>Essas estruturas compõem conjuntos distintos que são originados por meio de processos astronômicos dinâmicos e que permanecem em constante transformação. Elas foram descobertas por meio do avanço das pesquisas astronômicas. Ainda assim, são estruturas pouco conhecidas e que necessitam de maiores estudos pela ciência.</p>
+        </div>
     </body>
 </html>
