--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
     <head>
         <title>Meu primeiro site</title>
         <link rel="stylesheet" href="css/estilo.css">
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Silkscreen&family=Staatliches&display=swap" rel="stylesheet">
     </head>
     <body>
         <figure>
@@ -14,6 +20,8 @@
                 <h2>O que é galáxia?</h2>
                 <p>As galáxias são grandes estruturas formadas por inúmeros corpos celestes, como estrelas e planetas, além de poeira e gás cósmico. Esses elementos, por meio da ação da gravidade, permanecem em um mesmo agrupamento, formando, assim, grandes estruturas.</p>
                 <p>Essas estruturas compõem conjuntos distintos que são originados por meio de processos astronômicos dinâmicos e que permanecem em constante transformação. Elas foram descobertas por meio do avanço das pesquisas astronômicas. Ainda assim, são estruturas pouco conhecidas e que necessitam de maiores estudos pela ciência.</p>
+                <h2>Albuns</h2>
+                <iframe width="80%" src="https://www.youtube.com/embed/oJvgMvcSlNQ" title="Tudo sobre Galáxias" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </body>
 </html>
