--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Silkscreen&family=Staatliches&display=swap" rel="stylesheet">
     </head>
     <body>
-        <figure>
-            <img src="img/logo.png" alt="">
-        </figure>
+        <header>
+            <figure>
+                <img src="img/logo.png" alt="">
+            </figure>
+
+        </header>
+        
         <div class="container">
             <h1>Sobre a Galaxia</h1>
                 <p>Galáxia é uma grande estrutura formada por vários corpos celestes. A sua evolução e transformação foi descoberta pela ciência ao longo do processo de modernização dos estudos astronômicos. Porém, ainda há um conjunto de hipóteses relacionadas às galáxias que não foram comprovadas cientificamente.</p>
@@ -20,8 +24,18 @@
                 <h2>O que é galáxia?</h2>
                 <p>As galáxias são grandes estruturas formadas por inúmeros corpos celestes, como estrelas e planetas, além de poeira e gás cósmico. Esses elementos, por meio da ação da gravidade, permanecem em um mesmo agrupamento, formando, assim, grandes estruturas.</p>
                 <p>Essas estruturas compõem conjuntos distintos que são originados por meio de processos astronômicos dinâmicos e que permanecem em constante transformação. Elas foram descobertas por meio do avanço das pesquisas astronômicas. Ainda assim, são estruturas pouco conhecidas e que necessitam de maiores estudos pela ciência.</p>
-                <h2>Albuns</h2>
-                <iframe width="80%" src="https://www.youtube.com/embed/oJvgMvcSlNQ" title="Tudo sobre Galáxias" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h2>videos  sobre</h2>
+
+                <div class="video">
+                    <iframe width="80%" height="550" src="https://www.youtube.com/embed/oJvgMvcSlNQ" title="Tudo sobre Galáxias" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+
+                <div class="video">
+                    <iframe width="80%" height="550" src="https://www.youtube.com/embed/ORetZYbjrBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
         </div>
+        <footer>
+            <p>Thalys sampaio</p>
+        </footer>
     </body>
 </html>
