--- a/index.html
+++ b/index.html
@@ -14,19 +14,26 @@
             <figure>
                 <img src="img/logo.png" alt="">
             </figure>
+            <div class="menu"> 
 
+                <ul>
+                    <li> <a href="#">Sobre</a></li>
+                    <li> <a href="#gal">O que é</a></li>
+                    <li> <a href="#video">Videos</a></li>
+                </ul>
+            </div>
         </header>
         
         <div class="container">
             <h1>Sobre a Galaxia</h1>
                 <p>Galáxia é uma grande estrutura formada por vários corpos celestes. A sua evolução e transformação foi descoberta pela ciência ao longo do processo de modernização dos estudos astronômicos. Porém, ainda há um conjunto de hipóteses relacionadas às galáxias que não foram comprovadas cientificamente.</p>
                 <p>As galáxias são classificadas conforme o seu formato. A principal e mais conhecida galáxia é a Via Láctea, justamente onde está localizado o Sistema Solar e o planeta Terra. A formação das galáxias está atrelada ao processo de origem do Universo. Essas estruturas evoluem por meio da ação de diversos fenômenos astronômicos.</p>
-                <h2>O que é galáxia?</h2>
+                <h2 id="gal">O que é galáxia?</h2>
                 <p>As galáxias são grandes estruturas formadas por inúmeros corpos celestes, como estrelas e planetas, além de poeira e gás cósmico. Esses elementos, por meio da ação da gravidade, permanecem em um mesmo agrupamento, formando, assim, grandes estruturas.</p>
                 <p>Essas estruturas compõem conjuntos distintos que são originados por meio de processos astronômicos dinâmicos e que permanecem em constante transformação. Elas foram descobertas por meio do avanço das pesquisas astronômicas. Ainda assim, são estruturas pouco conhecidas e que necessitam de maiores estudos pela ciência.</p>
                 <h2>videos  sobre</h2>
 
-                <div class="video">
+                <div id="video" class="video">
                     <iframe width="80%" height="550" src="https://www.youtube.com/embed/oJvgMvcSlNQ" title="Tudo sobre Galáxias" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
@@ -36,6 +43,8 @@
         </div>
         <footer>
             <p>Thalys sampaio</p>
+            <p>conheça <a target="_blank" href="https://pequenostalentos.tecnologiaunica.com.br/">aqui </a>o prejeto pequenos talentos</p>
+            <p>projeto mantido pela <a target="_blank" href="https://tecnologiaunica.com.br/">tecnologia unica </a></p>
         </footer>
     </body>
 </html>
