--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Silkscreen&family=Staatliches&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <header>
@@ -19,12 +20,13 @@
                     <li> <a href="#">Sobre</a></li>
                     <li> <a href="#gal">O que é</a></li>
                     <li> <a href="#video">Videos</a></li>
+                    <li><a href="galeria.html">outros</a></li>
                 </ul>
             </div>
         </header>
         
         <div class="container">
-            <h1>Sobre a Galaxia</h1>
+            <h1>Sobre a Galáxia</h1>
                 <p>Galáxia é uma grande estrutura formada por vários corpos celestes. A sua evolução e transformação foi descoberta pela ciência ao longo do processo de modernização dos estudos astronômicos. Porém, ainda há um conjunto de hipóteses relacionadas às galáxias que não foram comprovadas cientificamente.</p>
                 <p>As galáxias são classificadas conforme o seu formato. A principal e mais conhecida galáxia é a Via Láctea, justamente onde está localizado o Sistema Solar e o planeta Terra. A formação das galáxias está atrelada ao processo de origem do Universo. Essas estruturas evoluem por meio da ação de diversos fenômenos astronômicos.</p>
                 <h2 id="gal">O que é galáxia?</h2>
